2003-05-16  Douglas Bates  <bates@stat.wisc.edu>

	* src/nlmefit.c (internal_EM): Fix by Peter Dalgaard for compound
	symmetry EM calculations (PR#2985)

2003-05-05  Douglas Bates  <bates@stat.wisc.edu>

	* R/lmList.R (update.lmList): Changed this and several other
	update methods.

	* R/groupedData.R: Use eval instead of do.call (Dieter Menne)

2003-04-17  Douglas Bates  <bates@stat.wisc.edu>

	* NAMESPACE: contributed by Brian Ripley
	
	* man/print.corStruct.Rd: Removed this and many other redundant
	documentation files for S3 methods.

	* R/<many files> Remove redundant GPL notices.

2003-03-25  Douglas Bates  <bates@stat.wisc.edu>

	* R/nlme.R (nonlinModel): Moved definition from AAA.R to here

	* man/summary.nlsList.Rd: Remove references to summary.nls

	* R/newMethods.R: Remove vestigial definitions of AIC.lm

	* R/zzMethods.R: Remove references to AIC.lm

2003-02-08  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (lme.formula): Removed hessian=TRUE in calls to optim as
	suggested by Brian Ripley.

2003-01-30  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R:
	Incorporate change from Brian Ripley in response to Dieter Menne

	* man/lme.lmList.Rd, man/lme.groupedData.Rd, man/lme.Rd:
	Documentation of the contrasts argument added (Greg Warnes).

2003-01-30  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (lme.formula): Incorporate Greg Warnes' changes for
	the contrasts argument.

	* R/nlsList.R: Correct check for is.null(class(FUN))

2002-12-27  Douglas Bates  <bates@stat.wisc.edu>

	* R/newFunc.R (gsummary): Fix comparison in check for varying
	columns (PR#1775 - bug report with fix provided by Dieter Menne.

2002-12-11  Douglas Bates  <bates@stat.wisc.edu>

	* R/lme.R (print.lme): Removed one more as.vector()

	* R/varFunc.R (print.summary.varFixed): changed  instances of
	deparse(as.vector(x)) to deparse(x) here and in many other places.

2002-09-10  Saikat DebRoy  <saikat@stat.wisc.edu>

	* nlsList.R (nlsList.formula): Use "try" instead of "restart".
