@@ -1,6 +1,6 @@
 Package: nlme
-Version: 3.1-41
-Date: 2003-05-17
+Version: 3.1-42
+Date: 2003-06-10
 Priority: recommended
 Title: Linear and nonlinear mixed effects models
 Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
@@ -9,5 +9,5 @@ Author: Jose Pinheiro <Jose.Pinheiro@pharma.novartis.com>,
         Deepayan Sarkar <deepayan@stat.wisc.edu> 
 Maintainer: Douglas Bates <bates@stat.wisc.edu>
 Description: Fit and compare Gaussian linear and nonlinear mixed-effects models.
-Depends: nls, R(>= 1.7.0)
+Depends: nls, lattice, R(>= 1.7.0)
 License: GPL version 2 or later
